Prod/src/objects/AccountClusterCoefficients__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the different coefficients to identify the Account Cluster</description>
    <fields>
        <fullName>Constant__c</fullName>
        <label>Constant</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anlz_sfdc_cust_avatax__c</fullName>
        <label>anlz_sfdc_cust_avatax</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anlz_sfdc_cust_avatax_false__c</fullName>
        <label>anlz_sfdc_cust_avatax_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anlz_sfdc_cust_certcapture__c</fullName>
        <label>anlz_sfdc_cust_certcapture</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anlz_sfdc_cust_certcapture_false__c</fullName>
        <label>anlz_sfdc_cust_certcapture_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_enterprise__c</fullName>
        <label>emp_band_enterprise</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_enterprise_false__c</fullName>
        <label>emp_band_enterprise_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_mid_mkt_mid_size__c</fullName>
        <label>emp_band_mid_mkt_mid_size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_mid_mkt_mid_size_false__c</fullName>
        <label>emp_band_mid_mkt_mid_size_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_small__c</fullName>
        <label>emp_band_small</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_small_false__c</fullName>
        <label>emp_band_small_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_unk__c</fullName>
        <label>emp_band_unk</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emp_band_unk_false__c</fullName>
        <label>emp_band_unk_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_01__c</fullName>
        <label>nexus_multi_state_01</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_01_false__c</fullName>
        <label>nexus_multi_state_01_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_02_05__c</fullName>
        <label>nexus_multi_state_02_05</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_02_05_false__c</fullName>
        <label>nexus_multi_state_02_05_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_06_10__c</fullName>
        <label>nexus_multi_state_06_10</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_06_10_false__c</fullName>
        <label>nexus_multi_state_06_10_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_11_25__c</fullName>
        <label>nexus_multi_state_11_25</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_11_25_false__c</fullName>
        <label>nexus_multi_state_11_25_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_unk__c</fullName>
        <label>nexus_multi_state_unk</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nexus_multi_state_unk_false__c</fullName>
        <label>nexus_multi_state_unk_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sic_1_flag__c</fullName>
        <label>sic_1_flag</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sic_1_flag_false__c</fullName>
        <label>sic_1_flag_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sic_2_flag__c</fullName>
        <label>sic_2_flag</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sic_2_flag_false__c</fullName>
        <label>sic_2_flag_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sic_3_flag__c</fullName>
        <label>sic_3_flag</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sic_3_flag_false__c</fullName>
        <label>sic_3_flag_false</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Account Cluster Coefficients</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Constant__c</columns>
        <columns>sic_1_flag__c</columns>
        <columns>sic_2_flag__c</columns>
        <columns>sic_3_flag__c</columns>
        <columns>sic_4_flag__c</columns>
        <columns>sic_5_flag__c</columns>
        <columns>sic_6_flag__c</columns>
        <columns>sic_7_flag__c</columns>
        <columns>sic_8_flag__c</columns>
        <columns>sic_9_flag__c</columns>
        <columns>emp_band_enterprise__c</columns>
        <columns>emp_band_mid_mkt_mid_size__c</columns>
        <columns>emp_band_small__c</columns>
        <columns>emp_band_unk__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>